# fe2o2

./: rustfmt.toml
ch07/: resopt.rs
misc/conts/: Cargo.toml
misc/conts/src/: main.rs
misc/errors/: Cargo.toml
misc/errors/src/: main.rs
misc/flang/: Cargo.toml
misc/flang/src/: lib.rs  main.rs
misc/generics/src/: lib.rs  main.rs
misc/minigrep/: Cargo.toml  README.md  poem.txt
misc/minigrep/src/: config.rs  core.rs  lib.rs  main.rs  runtime.rs
misc/modules/: Cargo.toml  f16.txt
misc/modules/src/: fire.rs  main.rs
misc/patmat/: Cargo.toml
misc/patmat/src/: main.rs
misc/sandbox/one/: Cargo.toml
misc/sandbox/one/src/: inner.rs  lib.rs  main.rs  outer.rs
misc/sandbox/three/src/: inner.rs  lib.rs  packf.rs
misc/sandbox/three/src/pack/: inner.rs  mod.rs  outer.rs
misc/sandbox/two/: Cargo.toml
misc/sandbox/two/src/: lib.rs  main.rs
misc/testing/src/: lib.rs  main.rs
misc/testing/tests/: adder.rs  muler.rs
misc/testing/tests/lola/: mod.rs
